--- a/style/style.css
+++ b/style/style.css
@@ -9,6 +9,14 @@
 		max-width: 1500px;
 		margin auto;
 	}
+	.header {
+		padding: 10px;
+		text-align: center;
+		background: white;
+		color: grey;
+		font-size: 30px;
+	 }
+	 
 	.row,
 	.row > .column {
 		padding:8px;
@@ -66,6 +74,40 @@ span{
 	color: Red;
 	text-align: center;
 }
+input[type=text], select {
+	width: 100%;
+	padding: 12px 20px;
+	margin: 8px 0;
+	display: inline-block;
+	border: 1px solid white;
+	border-radius: 4px;
+	box-sizing: border-box;
+ }
+ 
+ input[type=submit] {
+	width: 100%;
+	background-color: #4CAF50;
+	color: white;
+	padding: 14px 20px;
+	margin: 8px 0;
+	border: none;
+	border-radius: 4px;
+	cursor: pointer;
+ }
+ 
+ input[type=submit]:hover {
+	background-color: #45a049;
+ }
+ 
+ div {
+	border-radius: 5px;
+	background-color: #f2f2f2;
+	padding: 20px;
+ }
+ contact{
+	 float: left;
+	 font-size: 60em
+ }
 	@media screen and (max-width: 900px) {
 		.column{
 			width: 50%;
